@@ -93,8 +93,9 @@
 		<exec workingdir="staging/Installer" program="candle" commandline="-dIsGPL=${IsGPL} -dbuild=release main.wxs"/>
 		<exec workingdir="staging/Installer" program="candle" commandline="samples.wxs"/>
 		<exec workingdir="staging/Installer" program="candle" commandline="sources.wxs"/>
+		<exec workingdir="staging/Installer" program="candle" commandline="custom.wxs"/>
 		<exec workingdir="staging/Installer" program="light" 
-			commandline='main.wixobj samples.wixobj sources.wixobj "${wix.dir}/WixUI.wixlib" -loc "${wix.dir}/WixUI_en-us.wxl" -out MySql.Data.msi'/>
+			commandline='main.wixobj samples.wixobj sources.wixobj custom.wixobj "${wix.dir}/WixUI.wixlib" -loc "${wix.dir}/WixUI_en-us.wxl" -out MySql.Data.msi'/>
 
 		<zip zipfile="packages/mysql-connector-net-${ver}${postfix}.zip">
 			<fileset basedir="staging/Installer"><include name="MySql.Data.msi"/></fileset>
